spade-tests/src/snapshots/spade_tests__integration__namespacing_adds_to_the_correct_namespace.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of undeclared name x
  ┌─ testinput:8:5
  │
8 │     x()
  │     ^ Undeclared name


